--- a/insta/index.html
+++ b/insta/index.html
@@ -7,7 +7,7 @@
 
 	<h2>test image</h2>
 	<p><img src="https://i.ytimg.com/vi/FMMnvYsvDmI/maxresdefault.jpg" alt="naga"></p>
-	<p><img src="https://www.instagram.com/accounts/onetap/?next=%2F" alt="insta"></p>
+	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" alt="insta"></p>
 
 </body>
 </html>
