--- a/fav/index.html
+++ b/fav/index.html
@@ -9,7 +9,7 @@
 	<p>one of my most favorite place in india is kerala </p>
 	<h2>places to visit in kerala</h2>
 	<p>
-		<img src="holiday.jpg" width="700" height="300" alt="fav place">
+		<img src="../holiday.jpg" width="700" height="300" alt="fav place">
 	</p>
 
 </body>
