--- a/fav/index.html
+++ b/fav/index.html
@@ -6,11 +6,35 @@
 </head>
 <body>
 	<h1>My Holiday Destination</h1>
-	<p>one of my most favorite place in india is kerala </p>
-	<h2>places to visit in kerala</h2>
 	<p>
 		<img src="holiday.jpg" width="700" height="300" alt="fav place">
 	</p>
+	<section>
+	<h2>places to visit in kerala</h2>
+	<ul>
+		<li><a href="#Location1">Munnar</a></li>
+		<li><a href="#Location2">kochi</a></li>
+		<li><a href="#Location3">alappuzha</a></li>
+		<li><a href="#Location4">kovalam</a></li>
+	</ul>
+    </section>
+	<section id="Location1">
+	<h2>(#Location1)Munnar:</h2>
+	<p>Munnar is a town and hill station located in the Idukki district of the southwestern Indian state of Kerala. Munnar is situated at around 1,600 metres (5,200 ft) above mean sea level,in the Western Ghats mountain range.Munnar is also called as "Kashmir of south india" </p>
+	<p>
+		<img src="munnar.jpg" width="550" height="250" alt="mun">
+	</p>
+	<section id="Location2">
+		<h2>(#Location2)kochi:</h2>
+		<p>
+			Kochi (also known as Cochin) is a city in southwest India's coastal Kerala state. It has been a port since 1341, when a flood carved out its harbor and opened it to Arab, Chinese and European merchants. Sites reflecting those influences include Fort Kochi, a settlement with tiled colonial bungalows and diverse houses of worship. Cantilevered Chinese fishing nets, typical of Kochi, have been in use for centuries.
+		</p>
+        <p>
+        	<img src="kochi.jpg" width="550" height="250" alt="koc">
+        </p>
+
+
+
 
 </body>
 </html>
