--- a/fav/index.html
+++ b/fav/index.html
@@ -1,3 +1,5 @@
+
+		
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,24 +16,51 @@
 	<ul>
 		<li><a href="#Location1">Munnar</a></li>
 		<li><a href="#Location2">kochi</a></li>
-		<li><a href="#Location3">alappuzha</a></li>
-		<li><a href="#Location4">kovalam</a></li>
+		<li><a href="#Location3">alleppey</a></li>
+		<li><a href="#Location4">Thiruvananthapuram</a></li>
 	</ul>
     </section>
 	<section id="Location1">
 	<h2>(#Location1)Munnar:</h2>
-	<p>Munnar is a town and hill station located in the Idukki district of the southwestern Indian state of Kerala. Munnar is situated at around 1,600 metres (5,200 ft) above mean sea level,in the Western Ghats mountain range.Munnar is also called as "Kashmir of south india" </p>
+	<p>Located at the Western Ghats with an average elevation of 1700 meters above sea level, Munnar is a famous hill station in Kerala. The hill station enjoys a favorable and pleasant climate all year round and is famous for its lush green hills and tea plantations.September to March is the best time to visit Munnar because of pleasant weather. Summers (April - June) are a little warm, but one can still visit Munnar during this season. Monsoon season (July and August) experiences heavy rainfall which could hamper your travel plans and hence this period should be avoided. </p>
 	<p>
 		<img src="munnar.jpg" width="550" height="250" alt="mun">
 	</p>
 	<section id="Location2">
 		<h2>(#Location2)kochi:</h2>
 		<p>
-			Kochi (also known as Cochin) is a city in southwest India's coastal Kerala state. It has been a port since 1341, when a flood carved out its harbor and opened it to Arab, Chinese and European merchants. Sites reflecting those influences include Fort Kochi, a settlement with tiled colonial bungalows and diverse houses of worship. Cantilevered Chinese fishing nets, typical of Kochi, have been in use for centuries.
+			Kochi, the southern city of Kerala has optimum temperatures throughout the year, which means visiting Kochi during any time of the year, would work for travellers. However, Best time to visit Kochi is said to be from the months of October to March which comprises of the winter season for the city. Summers and monsoon, although a tad difficult due to the extremes, are equally attractive in Kochi, especially for budget travellers
 		</p>
         <p>
         	<img src="kochi.jpg" width="550" height="250" alt="koc">
         </p>
+       <section id="Location3">
+       	<h2>(#Location3)alleppey:</h2>
+       	<p>
+       		The town is among the oldest planned towns in India and is famous for its several backwater canals, beaches, paddy fields and lagoons. Alleppey is iconic for its houseboats cruises in the backwaters and attracts thousands of visitors each year.The best time to visit Alleppey is between October and February when the temperature is moderate (around 33°C), making it a perfect time to explore the city. Alleppey experiences monsoons between June and September.
+       	</p>
+       	<p>
+       		<img src="alleppey.jpg" width="550" height="250" alt="allep">
+       	</p>
+       	<section id="Location4">
+       	<h2>(#Location4)Thiruvananthapuram:</h2>
+       	<p>
+       		Thiruvananthapuram is a major tourist centre, known for the Padmanabhaswamy Temple, the beaches of Kovalam and Varkala, the backwaters of Poovar and Anchuthengu and its Western Ghats tracts of Ponmudi and the Agastyamala.
+       		Quite popular for its calm and scenic beaches, the town of Kovalam, 16 Km away from Kerala's capital Thiruvanthapuram has an array of other tourist attractions worth a visit.
+       	</p>
+       	<p>
+       		<img src="Thiruvananthapuram.jpg" width="550" height="250" alt="trivendrum">
+       	</p>
+       	<p>
+       		Back to top:<a href="#top">Back to top</a>
+       	</p>
+       	<p>Channadivyaswapnika &copy;copyrights</p>
+       	<p>contact us at my insta page!</p>
+       	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram title="contact us at this</a></p>
+
+
+
+
 
 
 
