--- a/fav/index.html
+++ b/fav/index.html
@@ -49,14 +49,14 @@
        		Quite popular for its calm and scenic beaches, the town of Kovalam, 16 Km away from Kerala's capital Thiruvanthapuram has an array of other tourist attractions worth a visit.
        	</p>
        	<p>
-       		<img src="Thiruvananthapuram.jpg" width="550" height="250" alt="trivendrum">
+       		<img src="Thiruvananthapuram.png" width="550" height="250" alt="trivendrum">
        	</p>
        	<p>
        		Back to top:<a href="#top">Back to top</a>
        	</p>
        	<p>Channadivyaswapnika &copy;copyrights</p>
        	<p>contact us at my insta page!</p>
-       	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram title="contact us at this</a></p>
+       	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram </a></p>
 
 
 
