--- a/fav/index.html
+++ b/fav/index.html
@@ -49,7 +49,7 @@
        		Quite popular for its calm and scenic beaches, the town of Kovalam, 16 Km away from Kerala's capital Thiruvanthapuram has an array of other tourist attractions worth a visit.
        	</p>
        	<p>
-       		<img src="Thiruvananthapuram.png" width="550" height="250" alt="trivendrum">
+       		<img src="triven.jpg" width="550" height="250" alt="tri">
        	</p>
        	<p>
        		Back to top:<a href="#top">Back to top</a>
