--- a/fav/index.html
+++ b/fav/index.html
@@ -56,7 +56,7 @@
        	</p>
        	<p>Channadivyaswapnika &copy;copyrights</p>
        	<p>contact us at my insta page!</p>
-       	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram </a></p>
+       	<p><a href="https://www.instagram.com/swapni_shetty/" class="alert-link">Instagram </a></p>
 
 
 
