--- a/insta/index.html
+++ b/insta/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>image</title>
+	<title>Resume 18MIS7050</title>
 </head>
 <body>
 
-	<h2>test image</h2>
+	<h2>Resume 18MIS7050</h2>
 	<p><img src="https://i.ytimg.com/vi/FMMnvYsvDmI/maxresdefault.jpg" alt="naga"></p>
-	<p>I am learing HTML course in coursera<a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram</a>
+	<p>My name is Divyaswapnika<a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram</a>
+	<p>Address:9-20-8A,Kavali</p>
+	<p>contact num: 7673972088</p>
+	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram</a></p>
+	<hr>
+	<h2>Qualification</h2>
+	<form>
+	Degree: university: Year: Marks:<textarea rows="10" col="7">
+		</form>
+		<hr>
+		<h2>Skill Set</h2>
+		<p>C language</p>
+		<p>Java</p>
+		<p>Data Analytics</p>
+		<hr>
+		<h2>Projects</h2>
+		<p>Engineering clinis</p>
+		<p>Software Railway Reservation system Front-end</p>
+		<p>Bank DataSet in DataAnalytics</p>
+		<hr>
+		<h2>Personal Information</h2>
+		<p>Date of Birth: 28-01-2001</p>
+		<p>Language known:Telugu,English</p>
+		<p>Hobbies:Listening Music And Reading Books</p>
+		<hr>
+		<h2>Declaration</h2>
+		<p>Signature</p>
+		<p>Place</p>
+		<hr>
+		
+		
+	
+		
 
 
 </body>
