--- a/insta/index.html
+++ b/insta/index.html
@@ -34,7 +34,32 @@
 		<p>Signature</p>
 		<p>Place</p>
 		<hr>
-	
+	<h2>User Registration Form</h2>
+	<form>
+		User Name:<input type="text"><br>
+	        First Name:<input type="text"><br>
+		Last Name:<input type="text"><br>
+		Enter Password:<input type="password"><br>
+		Enter Email ID:<input type="text"><br>
+		Gender:<input type="text"><br>
+		Qualiication:<select>
+		<option>--Select--</option>
+		<option> Under Graduate </option>
+		<option> Post Graduate </option>
+		<option> 12+/Intermediate</option>
+		</select>
+		Country:<select>
+		<option>--select--</option>
+		<option>India</option>
+		<option>USA</option>
+		<option>Germany</option>
+		<option>Austrila</option>
+		</select>
+		Phone Number:<input type="text"><br>
+		Accept the terms and conditions:<input type="checkbox"><br>
+		
+		
+		  
 		
 		
 	
