--- a/insta/index.html
+++ b/insta/index.html
@@ -57,6 +57,15 @@
 		</select>
 		Phone Number:<input type="text"><br>
 		Accept the terms and conditions:<input type="checkbox"><br>
+		<div class="button">
+			<a href="#" class="btn">create</a>
+			
+		</div>
+		<div class="copy">
+			<p>channadivyaswapnika &copy;copyrights</p>
+		</div>
+			
+
 		
 		
 		  
