--- a/fav/index.html
+++ b/fav/index.html
@@ -7,6 +7,7 @@
 	<title>My Holiday Destination</title>
 </head>
 <body>
+	<p><img src="https://i.ytimg.com/vi/FMMnvYsvDmI/maxresdefault.jpg" alt="naga"></p>
 	<h1>My Holiday Destination</h1>
 	<p>
 		<img src="holiday.jpg" width="700" height="300" alt="fav place">
