--- a/insta/index.html
+++ b/insta/index.html
@@ -58,8 +58,7 @@
 		Phone Number:<input type="text"><br>
 		Accept the terms and conditions:<input type="checkbox"><br>
 		<div class="button">
-			<a href="#" class="btn">create</a>
-			
+			create
 		</div>
 		<div class="copy">
 			<p>channadivyaswapnika &copy;copyrights</p>
