--- a/insta/index.html
+++ b/insta/index.html
@@ -57,13 +57,8 @@
 		</select>
 		Phone Number:<input type="text"><br>
 		Accept the terms and conditions:<input type="checkbox"><br>
-		<div class="button">
-			create
-		</div>
-		<div class="copy">
-			<p>channadivyaswapnika &copy;copyrights</p>
-		</div>
-			
+		<div class="button">style="create"</div>
+		
 
 		
 		
