--- a/insta/index.html
+++ b/insta/index.html
@@ -7,7 +7,7 @@
 
 	<h2>Resume 18MIS7050</h2>
 	
-	<p>My name is Divyaswapnika<a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram</a>
+	<p>My name is Divyaswapnika</p>
 	<p>Address:9-20-8A,Kavali</p>
 	<p>contact num: 7673972088</p>
 	<p><a href="https://www.instagram.com/accounts/onetap/?next=%2F" class="alert-link">Instagram</a></p>
@@ -37,17 +37,24 @@
 	<h2>User Registration Form</h2>
 	<form>
 		User Name:<input type="text"><br>
+		<br>
 	        First Name:<input type="text"><br>
+		<br>
 		Last Name:<input type="text"><br>
+		<br>
 		Enter Password:<input type="password"><br>
+		<br>
 		Enter Email ID:<input type="text"><br>
+		<br>
 		Gender:<input type="text"><br>
+		<br>
 		Qualiication:<select>
 		<option>--Select--</option>
 		<option> Under Graduate </option>
 		<option> Post Graduate </option>
 		<option> 12+/Intermediate</option>
 		</select>
+		<br>
 		Country:<select>
 		<option>--select--</option>
 		<option>India</option>
@@ -57,7 +64,7 @@
 		</select>
 		Phone Number:<input type="text"><br>
 		Accept the terms and conditions:<input type="checkbox"><br>
-		<div class="button">style="create"</div>
+		<button type="button" onclick="alert('Hello world!')">Create</button>
 		
 
 		
