--- a/insta/index.html
+++ b/insta/index.html
@@ -53,7 +53,7 @@
 		<option> Under Graduate </option>
 		<option> Post Graduate </option>
 		<option> 12+/Intermediate</option>
-		</select>
+		</select><br>
 		<br>
 		Country:<select>
 		<option>--select--</option>
@@ -61,9 +61,12 @@
 		<option>USA</option>
 		<option>Germany</option>
 		<option>Austrila</option>
-		</select>
+		</select><br>
+		<br>
 		Phone Number:<input type="text"><br>
+		<br>
 		Accept the terms and conditions:<input type="checkbox"><br>
+		<br>
 		<button type="button" onclick="alert('Hello world!')">Create</button>
 		
 
